# ei-attractor

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGES.txt  CMakeLists.txt  INSTALL  INSTALL.rst  README.md  README.rst  VERSIONING.rst  __init__.py  h5py_test.py  hdf5_storage.py  interface.py  list_conversion.py  mount_central_data_store.sh  pack.sh  requirements-pinned.txt  requirements.txt  requirements_doc.txt  requirements_first.txt  setup.py  shelve_storage.py  shelve_test.py
Cellular_GA/: .gitignore  ARCtest.sh  BINTest.sh  BitArray.h  CellularGA.cc  CellularGA.h  Chromosome.cc  Chromosome.h  ChromosomeFactory.h  Doxyfile  EVOtest.sh  Makefile  NNChromosome.cc  NNChromosome.h  NNOneCharChromosome.cc  NNOneCharChromosome.h  NNTrainData.cc  NNTrainData.h  NeuralNetwork.cc  NeuralNetwork.h  OneMaxChromosome.cc  OneMaxChromosome.h  README  README.ARC  RecNeuralNet.cc  RecNeuralNet.h  SimpleBitArray.h  args.cc  args.h  debug.h  error.cc  error.h  global.h  mpi  navod.txt  template_cc  test.cc  testNN.cc  testOneMax.cc
EI_network/: EI_network.py  EI_network_sim_mod.py  brian_global_config.py  custombrian.py  data_analysis.py  nest_test.py  test_EI_network.py  test_EI_network.sh  tools.py
Grid_Cells_ModelDB/: Makefile  README  Wavelets.py  common.py  custombrian.py  default_params.py  grid_cell_network.py  grid_cell_network_brian.py  grid_cell_network_nest.py  nest_test.py  parameters.py  place_cells.py  simulation.py  submit_simulation.py  tools.py
Grid_Cells_ModelDB/gridcells_brian_demo/: gridcells_brian_demo.py  parameters.py
Grid_Cells_ModelDB/img/: model_schematic.ai
brian/: ISI_Statistics.m  JOB_DESCRIPTION  attractor_network_fiete.py  batch_sn_response.sh  blobCrossCorrelogram.m  blobTrackingFig.m  computeFiringRate.m  connectionsFig.m  createFigureSpacing.m  createSpikeCell.m  crossCorrelation.m  drawPin.m  eddieBatch_fiete_path_integration.sh  eddieBatch_path_integration_sheet_size.sh  eddieBatch_runMultiple_fiete_path_integration.sh  eddieBatch_zero_velocity.sh  extractOptionNum.m  fiete_network.py  fiete_path_integration.py  getBlobNeighborhood.m  getFiringPop.m  getFiringPopFromFile.m  gridSpacing.m  haftingSN.m  illustrateMembranePotential.m  maximumDrifts.m  multiplePlot.m  networkSettleDownFig.m  parseOptions.m  plotConductance.m  plotConductanceFiring.m  plotSNResponse.m  plotSpikes_xy.m  plotStatistics.m  plot_network_params.m  populationResponseFigure.m  printPopulationResponse.m  rasterPlot.m  ratTrajectoryFig.m  run_batch.sh  (+6 more)
brian/msc_specific_outputs/: printFiringFigure.m
cuda_test/: myFirstKernel.cu
data/: .gitignore  preprocesshaftingData.m
data_analysis/: populationResponseFigure.m  rasterPlot.m
doc/: Makefile  conf.py  index.rst  intro.rst  make.bat  model_overview.rst  references.rst  simulation_workflow.rst  todolist.rst
graphs/: WattsStrogatzGraph.m  checkGraphColoring.m  colors_beta.m  colors_k.m  greedyColouring.m  shuffleGraph.m
grid_cell_model/: .gitignore  EI_network.py  Wavelets.py  common.py  create_gridcells_demo.sh  custombrian.py  data_analysis.py  default_params.py  fig_spike_maps.py  grid_cell_analysis.py  grid_cell_network.py  grid_cell_network_brian.py  grid_cell_network_nest.py  grid_cell_sim_mod.py  hdf5_saver.py  nest_test.py  network_size.sh  parameters.py  place_cells.py  place_input.py  plotting.py  rat_trajectory_lowpass.mat  simulation_basic_grids.py  simulation_fig_model.py  spike_analysis.py  submit_basic_grids.py  submit_fig_model.py  test_EI_network.py  tools.py
grid_cell_model/analysis/src/: CMakeLists.txt  _signalmodule.cpp  _spikesmodule.cpp  definitions.h  python_converter.h  signal.h  spikes.h
grid_cell_model/nest/gridcells/: .gitignore  CurrentGenerator.h  Doxyfile  Makefile.am  PulsatingCurrentGenerator.h  VelocityInputGenerator.cpp  VelocityInputGenerator.h  bootstrap.sh  configure.ac  gaussian_noise_generator.h  gridcells.cpp  gridcells.h  gridcells_definitions.h  gridcells_exceptions.h  gridcells_names.h  gridcellsmodule.cpp  gridcellsmodule.h  iaf_gridcells.cpp  iaf_gridcells.h  nmda.h  place_cell_generator.cpp  place_cell_generator.h  ramp_current_generator.cpp  ramp_current_generator.h
grid_cell_model/nest/gridcells/sli/: gridcells.sli  gridcellsmodule.sli
grid_cell_model/nest/gridcells/test/: .gitignore  CMakeLists.txt  iaf_gridcells_unittest.cpp  nmda_test_vec_gen.py  nmda_test_vectors.txt
ideas/: DataStore.md  ideas.txt  model_versions.txt  noise.txt  place_cells.txt  simulation_data_storage.vpp  synaptic_profiles.txt
model_fitting/: OrnsteinUhlenbeckProcess.m  S.m  X.m  activeElectrodeCompensation.m  data  dynamic_IV_curve.m  findSpikes.m  generate_currents.m  sigma.m
mult_bump_spiking_net/: JOB_DESCRIPTION  brian_global_config.py  eddieBatch_fiete_path_integration.sh  eddieBatch_lambda_net.sh  eddieBatch_path_integration_sheet_size.sh  eddieBatch_plotStatistics.sh  eddieBatch_static_wave_lambda_net.sh  eddieBatch_submit.sh  extractOptionNum.m  fiete_network.py  fiete_path_integration.py  jupiter_fiete_path_integration.sh  mult_bump_1d_network.py  mult_bump_network.py  mult_bump_simulation_mod.py  parseOptions.m  plotSNResponse.m  plotSpikes_xy.m  results  save_connections.py  sgeWrapper.sh
nest_interface/: Makefile.am  bootstrap.sh  configure.ac  static_modules.h
noisefigs/: setup.py
oscillations/: e_i.m  e_input_current.m  e_input_current_fig_detail_all_trials.m  e_input_current_figures.m  e_input_current_frequency_individual.m  fig_autocorrelogram_all_trials.m  fig_input_spread_freq_spectrum_individual.m  fig_populationDetail.m  getFiringRate.m  getPopOscFreqAutoCorr.m  network.py  output  plotTrialDetails.m  simulateEI.m
path_integration_limits/: .gitignore  README  plot_gaussian_err.py
python/testmodule/: CMakeLists.txt  setup.py  test.py  test_numpy_boost.cpp  testmodule.c  testmodule.cpp
ramp_model/: common.py  default_params.py  log.py  network.py  parameters.py  simulation.py  submit_job.py
simtools/: .gitignore  README.md  arguments.py  setup.py  tox.ini
single_bump_spiking_net/: single_bump.py
templates/: python.py
(+1536 files in other folders)
